--- a/test.ipynb
+++ b/test.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1599717381436",
+   "name": "python_defaultSpec_1599802436104",
    "display_name": "Python 3.8.5 32-bit ('env': venv)"
   }
  },
@@ -24,20 +24,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import logging\n",
     "import getpass\n",
     "import datetime\n",
-    "\n",
-    "logger = logging.getLogger()\n",
-    "\n",
-    "show = logging.StreamHandler()\n",
-    "formatter = logging.Formatter(\"%(asctime)s \"))\n",
+    "logging.basicConfig(level=logging.DEBUG, format=\"%(asctime)s %(levelname)s:%(message)s\")\n",
     "dir_path = \"\"\n",
     "filename = \"\"\n",
-    "\n"
+    "logging.info(\"213113\")\n",
+    "logging.warning(\"213113\")"
    ]
   },
   {
@@ -102,9 +101,82 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "a = set()\n",
+    "print(f\"{len(a)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "1234 4 <class 'str'>\n"
+    }
+   ],
+   "source": [
+    "b = ()\n",
+    "c = \"R\"\n",
+    "d =  (\"1234\")\n",
+    "print(d, len(d), type(d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "diccc = {\"q\":1, \"c\":2, \"e\":4}\n",
+    "jsdumps = json.dumps(diccc)\n",
+    "jsloads = json.loads(jsdumps)\n",
+    "print(jsdumps , type(jsdumps))\n",
+    "print(jsloads , type(jsloads))\n",
+    "if 'q' and 'c' and 'e' in jsloads.keys():\n",
+    "    print(True)\n",
+    "print(jsloads.keys())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from flask import jsonify\n",
+    "import json\n",
+    "diccc = {\"q\":1, \"c\":2, \"e\":4}\n",
+    "print(json.dumps(diccc))\n",
+    "print(jsonify(diccc))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "  def repeat(self, msg):\n",
+    "    self.msg = msg\n",
+    "    CLMES = f\"{self.msg}\"\n",
+    "    self.client.sendall(CLMES.encode('utf-8'))\n",
+    "    rece = self.client.recv(1024)\n",
+    "    print(str(rece, encoding='utf-8'))"
+   ]
   }
  ]
 }
