--- a/test.ipynb
+++ b/test.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1599802436104",
+   "name": "python_defaultSpec_1600322421145",
    "display_name": "Python 3.8.5 32-bit ('env': venv)"
   }
  },
@@ -112,17 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "1234 4 <class 'str'>\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "b = ()\n",
     "c = \"R\"\n",
@@ -177,6 +171,69 @@
     "    rece = self.client.recv(1024)\n",
     "    print(str(rece, encoding='utf-8'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "server_ip = (\"192.168.43.196\",)\n",
+    "server_status = {server_ip[0]:False}\n",
+    "print(type(server_ip),type(server_status))\n",
+    "print(server_status[\"192.168.43.196\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "server_ip = (\"192.168.43.196\", \"123\", \"45356\")\n",
+    "for i in server_ip:\n",
+    "\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# list all built-in keywords\n",
+    "import keyword\n",
+    "print(keyword.kwlist)\n",
+    "\n",
+    "# list all built-in keywords\n",
+    "print(vars(__builtin__).keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "print(Path.cwd())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
