--- a/test.ipynb
+++ b/test.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1600322421145",
+   "name": "python_defaultSpec_1600652241597",
    "display_name": "Python 3.8.5 32-bit ('env': venv)"
   }
  },
@@ -218,14 +218,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "['# configuration for\\n', '# work with ga-server-periodic\\n', '\\n', '[core]\\n', 'include = common/server-common.conf\\n', 'include = common/controller.conf\\n', 'include = common/video-x264.conf\\n', 'include = common/video-x264-param.conf\\n', 'include = common/audio-lame.conf\\n', '\\n', '[ga-server-periodic]\\n', 'enable-audio = true\\n', 'capture-cursor = true']\n['include', 'common/server-common.conf']\n['include', 'common/controller.conf']\n['include', 'common/video-x264.conf']\n['include', 'common/video-x264-param.conf']\n['include', 'common/audio-lame.conf']\n['enable-audio', 'true']\n['capture-cursor', 'true']\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'\\nslist[0] = \"# configuration for ABC\"+\"\\n\"\\nnew = \"\".join(slist)\\nprint(new)\\nwith open(\"server.ABC.conf\",\\'w\\') as fw:\\n    fw.write(new)\\n'"
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
-    "print(Path.cwd())\n"
+    "import os\n",
+    "\n",
+    "with open(\"server.periodic.conf\",'r') as fr:\n",
+    "    slist = fr.readlines()\n",
+    "\n",
+    "print(slist)\n",
+    "for i in range(len(slist)):\n",
+    "    check = slist[i]\n",
+    "    if \"=\" in check:\n",
+    "        A = check.strip().split(\" = \")\n",
+    "        print(A)\n",
+    "\n",
+    "        \n",
+    "\n",
+    "'''\n",
+    "slist[0] = \"# configuration for ABC\"+\"\\n\"\n",
+    "new = \"\".join(slist)\n",
+    "print(new)\n",
+    "with open(\"server.ABC.conf\",'w') as fw:\n",
+    "    fw.write(new)\n",
+    "'''"
    ]
   },
   {
