--- a/test.ipynb
+++ b/test.ipynb
@@ -14,11 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-<<<<<<< HEAD
    "name": "python_defaultSpec_1600652241597",
-=======
-   "name": "python_defaultSpec_1600322421145",
->>>>>>> origin/dev1(sql)
    "display_name": "Python 3.8.5 32-bit ('env': venv)"
   }
  },
@@ -222,7 +218,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 26,
    "metadata": {
     "tags": []
@@ -252,7 +247,7 @@
     "print(slist)\n",
     "for i in range(len(slist)):\n",
     "    check = slist[i]\n",
-    "    if \"=\" in check:\n",
+    "   if \"=\" in check: if \"=\" in check:\n",
     "        A = check.strip().split(\" = \")\n",
     "        print(A)\n",
     "\n",
@@ -265,16 +260,6 @@
     "with open(\"server.ABC.conf\",'w') as fw:\n",
     "    fw.write(new)\n",
     "'''"
-=======
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "print(Path.cwd())\n"
->>>>>>> origin/dev1(sql)
    ]
   },
   {
