--- a/test.ipynb
+++ b/test.ipynb
@@ -14,8 +14,13 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1600652241597",
-   "display_name": "Python 3.8.5 32-bit ('env': venv)"
+   "name": "Python 3.8.5 32-bit ('env')",
+   "display_name": "Python 3.8.5 32-bit ('env')",
+   "metadata": {
+    "interpreter": {
+     "hash": "51320aac29360921745e54246e16a0ef501f9c8fbfcf0178a0c1015906c54a80"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -218,40 +223,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "['# configuration for\\n', '# work with ga-server-periodic\\n', '\\n', '[core]\\n', 'include = common/server-common.conf\\n', 'include = common/controller.conf\\n', 'include = common/video-x264.conf\\n', 'include = common/video-x264-param.conf\\n', 'include = common/audio-lame.conf\\n', '\\n', '[ga-server-periodic]\\n', 'enable-audio = true\\n', 'capture-cursor = true']\n['include', 'common/server-common.conf']\n['include', 'common/controller.conf']\n['include', 'common/video-x264.conf']\n['include', 'common/video-x264-param.conf']\n['include', 'common/audio-lame.conf']\n['enable-audio', 'true']\n['capture-cursor', 'true']\n"
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "'\\nslist[0] = \"# configuration for ABC\"+\"\\n\"\\nnew = \"\".join(slist)\\nprint(new)\\nwith open(\"server.ABC.conf\",\\'w\\') as fw:\\n    fw.write(new)\\n'"
-     },
-     "metadata": {},
-     "execution_count": 26
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import os\n",
     "\n",
-    "with open(\"server.periodic.conf\",'r') as fr:\n",
+    "with open(\"C:\\\\gaminganywhere-0.8.0\\\\bin\\\\config\\\\server.mupen64plus.win32.conf\",'r') as fr:\n",
     "    slist = fr.readlines()\n",
     "\n",
     "print(slist)\n",
-    "for i in range(len(slist)):\n",
-    "    check = slist[i]\n",
-    "   if \"=\" in check: if \"=\" in check:\n",
+    "for check in slist:\n",
+    "    if \"=\" in check:\n",
     "        A = check.strip().split(\" = \")\n",
     "        print(A)\n",
-    "\n",
-    "        \n",
+    "        if 'include' in A[0]:\n",
+    "            print(\"ooo\")\n",
+    "        check = \" = \".join(A) + \"\\n\"\n",
+    "    print(check)\n",
     "\n",
     "'''\n",
     "slist[0] = \"# configuration for ABC\"+\"\\n\"\n",
@@ -260,6 +252,68 @@
     "with open(\"server.ABC.conf\",'w') as fw:\n",
     "    fw.write(new)\n",
     "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "A = {\"1\": 11, \"2\": 22 }\n",
+    "print(A.items())\n",
+    "for k, v in A.items() :\n",
+    "    print(k)\n",
+    "    print(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import os\n",
+    "configpath = \"C:\\\\gaminganywhere-0.8.0\\\\bin\\\\config\\\\\"\n",
+    "os.chdir(configpath)\n",
+    "Path.cwd()\n",
+    "with open(\"ABC.conf\" ,'x') as fr:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "{'include = common/audio-lame.conf': True, '123': 23, 'game-exe': 'd:\\\\smallgame\\\\N64\\\\mupen64plus\\\\mupen64plus.exe'}\ndict_keys(['include = common/audio-lame.conf', '123', 'game-exe'])\ndict_items([('include = common/audio-lame.conf', True), ('123', 23), ('game-exe', 'd:\\\\smallgame\\\\N64\\\\mupen64plus\\\\mupen64plus.exe')])\n[('include = common/audio-lame.conf', True), ('123', 23), ('game-exe', 'd:\\\\smallgame\\\\N64\\\\mupen64plus\\\\mupen64plus.exe')]\nTrue\n{'include = common/audio-lame.conf': True}\n{'123': 23, 'game-exe': 'd:\\\\smallgame\\\\N64\\\\mupen64plus\\\\mupen64plus.exe'}\n"
+    }
+   ],
+   "source": [
+    "test_dic = {'include = common/audio-lame.conf':True, '123': 23,'game-exe':'d:\\\\smallgame\\\\N64\\\\mupen64plus\\\\mupen64plus.exe'}\n",
+    "test = test_dic.copy().items()\n",
+    "print(str(test_dic))\n",
+    "print(test_dic.keys())\n",
+    "print(test)\n",
+    "print(L)\n",
+    "print('include' in str(test_dic.keys()))\n",
+    "inclu = {}\n",
+    "if 'include' in str(test_dic):\n",
+    "    for k, v in test:\n",
+    "        if 'include' in str(k):\n",
+    "            inclu[k]=v\n",
+    "            test_dic.pop(k)\n",
+    "print(inclu)\n",
+    "print(test_dic)\n",
+    "\n"
    ]
   },
   {
