--- a/test.ipynb
+++ b/test.ipynb
@@ -237,14 +237,21 @@
     "\n",
     "print(slist)\n",
     "for check in slist:\n",
+    "    \n",
     "    if \"=\" in check:\n",
     "        A = check.strip().split(\" = \")\n",
     "        print(A)\n",
-    "        if 'include' in A[0]:\n",
-    "            print(\"ooo\")\n",
     "        check = \" = \".join(A) + \"\\n\"\n",
     "    print(check)\n",
     "\n",
+    "'''\n",
+    "inclu = {}\n",
+    "if 'include' in str(test_dic):\n",
+    "    for k, v in test:\n",
+    "        if 'include' in str(k):\n",
+    "            inclu[k]=v\n",
+    "            test_dic.pop(k)\n",
+    "'''\n",
     "'''\n",
     "slist[0] = \"# configuration for ABC\"+\"\\n\"\n",
     "new = \"\".join(slist)\n",
@@ -272,31 +279,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import os\n",
     "configpath = \"C:\\\\gaminganywhere-0.8.0\\\\bin\\\\config\\\\\"\n",
-    "os.chdir(configpath)\n",
-    "Path.cwd()\n",
-    "with open(\"ABC.conf\" ,'x') as fr:\n",
-    "    pass"
+    "A = \"C:\\\\Users\\\\RD\\\\Desktop\\\\broker\\\\server\"\n",
+    "os.chdir(A)\n",
+    "R = Path.cwd() / 'server.periodic.conf'\n",
+    "RR = R.read_text()\n",
+    "with open(A+\"\\\\ABC.conf\", 'x') as fx:\n",
+    "    fx.write(RR)\n",
+    "    fx.seek(0,0)\n",
+    "    fx.write(\"# configuration for ABC\"+\"\\n\")\n",
+    "\n",
+    "print(RR)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "{'include = common/audio-lame.conf': True, '123': 23, 'game-exe': 'd:\\\\smallgame\\\\N64\\\\mupen64plus\\\\mupen64plus.exe'}\ndict_keys(['include = common/audio-lame.conf', '123', 'game-exe'])\ndict_items([('include = common/audio-lame.conf', True), ('123', 23), ('game-exe', 'd:\\\\smallgame\\\\N64\\\\mupen64plus\\\\mupen64plus.exe')])\n[('include = common/audio-lame.conf', True), ('123', 23), ('game-exe', 'd:\\\\smallgame\\\\N64\\\\mupen64plus\\\\mupen64plus.exe')]\nTrue\n{'include = common/audio-lame.conf': True}\n{'123': 23, 'game-exe': 'd:\\\\smallgame\\\\N64\\\\mupen64plus\\\\mupen64plus.exe'}\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_dic = {'include = common/audio-lame.conf':True, '123': 23,'game-exe':'d:\\\\smallgame\\\\N64\\\\mupen64plus\\\\mupen64plus.exe'}\n",
     "test = test_dic.copy().items()\n",
@@ -314,6 +323,51 @@
     "print(inclu)\n",
     "print(test_dic)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "{&#39;C&#39;: 3}\n{&#39;B&#39;: 1}\n{&#39;A&#39;: 2}\newqewq (&#39;1&#39;, &#39;2&#39;, &#39;3&#39;, &#39;65&#39;)\n1, 2, 3, 65\n"
+    }
+   ],
+   "source": [
+    "def ABC(*test1, **test2):\n",
+    "    print(test2)\n",
+    "    print(f\"ewqewq {test1}\")\n",
+    "    print(', '.join(i for i in test1))\n",
+    "A = 2\n",
+    "test_dic = {'include = common/audio-lame.conf':True, '123': 23,'game-exe':'d:\\\\smallgame\\\\N64\\\\mupen64plus\\\\mupen64plus.exe'}\n",
+    "B = {\"B\":1}\n",
+    "C = {\"C\":3}\n",
+    "D = '1','2','3','65'\n",
+    "E = \"*\"\n",
+    "if C != {}:\n",
+    "    print(C)\n",
+    "if B != {}:\n",
+    "    print(B)\n",
+    "ABC(*D, **{\"A\":A})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "A = {'A': 123}\n",
+    "B = A.values()\n",
+    "print(A.items())\n",
+    "print(B)"
    ]
   },
   {
