--- a/test.ipynb
+++ b/test.ipynb
@@ -327,17 +327,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "{&#39;C&#39;: 3}\n{&#39;B&#39;: 1}\n{&#39;A&#39;: 2}\newqewq (&#39;1&#39;, &#39;2&#39;, &#39;3&#39;, &#39;65&#39;)\n1, 2, 3, 65\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def ABC(*test1, **test2):\n",
     "    print(test2)\n",
@@ -368,6 +362,105 @@
     "B = A.values()\n",
     "print(A.items())\n",
     "print(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import threading\n",
+    "import time\n",
+    "\n",
+    "def job():\n",
+    "    for i in range(5):\n",
+    "        print(\"Child thread:\", i, threading.current_thread().ident)\n",
+    "        time.sleep(1)\n",
+    "\n",
+    "t = threading.Thread(target = job)\n",
+    "t.setDaemon(True)\n",
+    "t.start()\n",
+    "\n",
+    "# 主執行緒繼續執行自己的工作\n",
+    "for i in range(3):\n",
+    "    print(\"Main thread:\", i,threading.current_thread().ident)\n",
+    "    time.sleep(1)\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(\"Done.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "A0\n",
+      "A1\n",
+      "A2\n",
+      "A3\n",
+      "A4\n",
+      "A5\n",
+      "A6\n",
+      "A7\n",
+      "A8\n",
+      "A9\n",
+      "\tB0\n",
+      "\tB1\n",
+      "\tB2\n",
+      "\tB3\n",
+      "\tB4\n",
+      "\tB5\n",
+      "\tB6\n",
+      "\tB7\n",
+      "\tB8\n",
+      "\tB9\n"
+     ]
+    }
+   ],
+   "source": [
+    "import threading\n",
+    "class ABC:\n",
+    "    def __init__(self,qq):\n",
+    "        self.qq = qq\n",
+    "    def A(self):\n",
+    "        for i in range(10):\n",
+    "            print(\"A\" + f\"{i}\")\n",
+    "    def B(self):\n",
+    "        for i in range(10):\n",
+    "            print(\"\\t\"+\"B\"+ f\"{i}\")    \n",
+    "    def childthread(self, W):\n",
+    "        if W == \"p\":\n",
+    "            self.T = threading.Thread(target = self.A)\n",
+    "        else:\n",
+    "            self.T = threading.Thread(target = self.B)\n",
+    "        #self.T.setDaemon(True)\n",
+    "        self.T.join()\n",
+    "        self.T.start()\n",
+    "    \n",
+    "AAA = ABC(i)\n",
+    "AAA.childthread(\"p\")\n",
+    "AAA.childthread(\"g\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def QQQ():\n",
+    "    A = 1\n",
+    "    B = 2\n",
+    "    return [A, B]\n",
+    "[C, D] = QQQ()\n",
+    "print(C, D)"
    ]
   },
   {
