--- a/test.ipynb
+++ b/test.ipynb
@@ -64,11 +64,7 @@
     "HOST = 'localhost'\n",
     "PORT =  9999\n",
     "server = socketserver.TCPServer((HOST, PORT), Handler)\n",
-    "server.serve_forever()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "server.serve_forever()\n"
    ]
   },
   {
@@ -94,6 +90,7 @@
     "    self.client.sendall(CLMES.encode('utf-8'))\n",
     "    rece = self.client.recv(1024)\n",
     "    print(str(rece, encoding='utf-8')\n",
+    "\n",
     "\n",
     "A = client_socket()\n",
     "for i in range(20):\n",
@@ -394,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -426,27 +423,28 @@
    ],
    "source": [
     "import threading\n",
-    "class ABC:\n",
-    "    def __init__(self,qq):\n",
-    "        self.qq = qq\n",
+    "class ABC(threading.Thread):\n",
+    "    def __init__(self, arg):\n",
+    "        threading.Thread.__init__(self)\n",
+    "        self.arg = arg\n",
     "    def A(self):\n",
     "        for i in range(10):\n",
     "            print(\"A\" + f\"{i}\")\n",
     "    def B(self):\n",
     "        for i in range(10):\n",
     "            print(\"\\t\"+\"B\"+ f\"{i}\")    \n",
-    "    def childthread(self, W):\n",
-    "        if W == \"p\":\n",
-    "            self.T = threading.Thread(target = self.A)\n",
+    "    def run(self):\n",
+    "        if self.arg == \"p\":\n",
+    "            t = self.A()\n",
     "        else:\n",
-    "            self.T = threading.Thread(target = self.B)\n",
-    "        #self.T.setDaemon(True)\n",
-    "        self.T.join()\n",
-    "        self.T.start()\n",
-    "    \n",
-    "AAA = ABC(i)\n",
-    "AAA.childthread(\"p\")\n",
-    "AAA.childthread(\"g\")\n"
+    "            t = self.B()\n",
+    "\n",
+    "AAA = ABC(\"p\")\n",
+    "BBB = ABC(\"g\")\n",
+    "AAA.start()\n",
+    "BBB.start()\n",
+    "AAA.join()\n",
+    "BBB.join()\n"
    ]
   },
   {
@@ -461,6 +459,29 @@
     "    return [A, B]\n",
     "[C, D] = QQQ()\n",
     "print(C, D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(bytes(''.encode()))\n",
+    "print(''.encode())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from zipfile import ZipFile\n",
+    "\n",
+    "with ZipFile (\"ABC.zip\", 'r')as zip:\n",
+    "    line = zip.read()\n",
+    "    print(line)"
    ]
   },
   {
