--- a/test.ipynb
+++ b/test.ipynb
@@ -28,20 +28,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "2020-10-22 10:28:31,662 -DEBUG <module>:123124123\n",
+      "2020-10-22 10:28:31,665 -INFO <module>:213113\n",
+      "2020-10-22 10:28:31,668 -WARNING <module>:6544432\n"
+     ]
+    }
+   ],
    "source": [
     "import logging\n",
-    "import getpass\n",
     "import datetime\n",
-    "logging.basicConfig(level=logging.DEBUG, format=\"%(asctime)s %(levelname)s:%(message)s\")\n",
-    "dir_path = \"\"\n",
-    "filename = \"\"\n",
+    "FORMA = \"%(asctime)s -%(levelname)s %(funcName)s:%(message)s\"\n",
+    "DATE = '%Y%m%dT%H%M%S'\n",
+    "logging.basicConfig(level=logging.DEBUG, format=FORMA)\n",
+    "logging.debug(\"123124123\")\n",
     "logging.info(\"213113\")\n",
-    "logging.warning(\"213113\")"
+    "logging.warning(\"6544432\")"
    ]
   },
   {
@@ -357,7 +367,7 @@
    "source": [
     "A = {'A': 123}\n",
     "B = A.values()\n",
-    "print(A.items())\n",
+    "print(len(A))\n",
     "print(B)"
    ]
   },
@@ -391,36 +401,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "A0\n",
-      "A1\n",
-      "A2\n",
-      "A3\n",
-      "A4\n",
-      "A5\n",
-      "A6\n",
-      "A7\n",
-      "A8\n",
-      "A9\n",
-      "\tB0\n",
-      "\tB1\n",
-      "\tB2\n",
-      "\tB3\n",
-      "\tB4\n",
-      "\tB5\n",
-      "\tB6\n",
-      "\tB7\n",
-      "\tB8\n",
-      "\tB9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import threading\n",
     "class ABC(threading.Thread):\n",
@@ -482,6 +465,46 @@
     "with ZipFile (\"ABC.zip\", 'r')as zip:\n",
     "    line = zip.read()\n",
     "    print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import threading\n",
+    "import time\n",
+    "from queue import Queue\n",
+    "def job(l,q):\n",
+    "    for i in range (len(l)):\n",
+    "        l[i] = l[i]**2\n",
+    "    q.put(l)\n",
+    "def multithreading():\n",
+    "    q =Queue()\n",
+    "    threads = []\n",
+    "    data = [[1,2,3],[3,4,5],[4,4,4],[5,5,5]]\n",
+    "    for i in range(4):\n",
+    "        t = threading.Thread(target=job,args=(data[i],q))\n",
+    "        t.start()\n",
+    "        threads.append(t)\n",
+    "    for thread in threads:\n",
+    "        thread.join()\n",
+    "    results = []\n",
+    "    for _ in range(4):\n",
+    "        results.append(q.get())\n",
+    "    print(results)\n",
+    "multithreading()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psutil\n",
+    "print(psutil.pid_exists('123'))"
    ]
   },
   {
