--- a/test.ipynb
+++ b/test.ipynb
@@ -28,21 +28,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "2020-10-22 10:28:31,662 -DEBUG <module>:123124123\n",
-      "2020-10-22 10:28:31,665 -INFO <module>:213113\n",
-      "2020-10-22 10:28:31,668 -WARNING <module>:6544432\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import logging\n",
     "import datetime\n",
@@ -500,11 +490,113 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import psutil\n",
-    "print(psutil.pid_exists('123'))"
+    "# print(psutil.pid_exists('123'))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class A:\n",
+    "    def AA(self):\n",
+    "        print(\"AA\")\n",
+    "\n",
+    "class B:\n",
+    "    def BB(self):\n",
+    "        print(\"BB\")\n",
+    "    @classmethod\n",
+    "    def AB(cls):\n",
+    "        print(\"AB\")\n",
+    "        cls().BB()\n",
+    "B.AB()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class A:\n",
+    "    def __init__(self, a):\n",
+    "        self.a = a\n",
+    "    def AA(self):\n",
+    "        if self.a == \"A\":\n",
+    "            print(\"AA\")\n",
+    "            return \"A\"\n",
+    "        else:\n",
+    "            print(\"BB\")\n",
+    "\n",
+    "AAA = A(\"A\").AA()\n",
+    "BB = A(\"B\").AA()\n",
+    "A(\"B\").AA()\n",
+    "print(BB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import subprocess\n",
+    "cmd = \"TASKLIST\", \"/FI\", \"imagename eq ga-server-periodic.exe\"\n",
+    "tasks = subprocess.check_output(cmd).decode('big5').split()\n",
+    "#.split(\"\\r\\n\")\n",
+    "\n",
+    "if \"ga-server-periodic.exe\" in tasks:\n",
+    "    print(\"!!!\")\n",
+    "print(tasks)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TASKLIST /FI \"imagename eq ga-server-periodic.exe\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import winrm\n",
+    "\n",
+    "_account = {\"192.168.43.196\":\"RD\"}\n",
+    "_pwd = {'RD':'Aa123456'}\n",
+    "ip = \"192.168.43.196\"\n",
+    "s = winrm.Session(f\"{ip}\",auth=(_account[ip] , _pwd[_account[ip]] ))\n",
+    "r = s.run_cmd('ipconfig')\n",
+    "print(r.std_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " with open (\"Screen Shot 2020-10-24 at 11.01.26 AM.zip\", 'rb')as rb:\n",
+    "     while True:\n",
+    "         data = rb.read(8)\n",
+    "         print(data)\n",
+    "         if not data:\n",
+    "             break"
    ]
   },
   {
