--- a/test.ipynb
+++ b/test.ipynb
@@ -349,16 +349,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "dict_values([123, 3423]) <class 'dict_values'>\nvideo-source-v4l-mode = 0 160 120\n\n"
+     ]
+    }
+   ],
    "source": [
-    "A = {'A': 123}\n",
+    "A = {'A': 123, 'B':3423}\n",
     "B = A.values()\n",
-    "print(len(A))\n",
-    "print(B)"
+    "C = '#video-source-v4l-mode = 0 160 120\\n'\n",
+    "'''\n",
+    "for v in A.values():\n",
+    "    print(v)\n",
+    "'''\n",
+    "print(C.strip(\"#\"))\n",
+    "C = \"# \"+ C\n",
+    "print(C)"
    ]
   },
   {
@@ -587,13 +601,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "outputPrepend"
+    ]
+   },
    "outputs": [],
    "source": [
     " with open (\"Screen Shot 2020-10-24 at 11.01.26 AM.zip\", 'rb')as rb:\n",
     "     while True:\n",
-    "         data = rb.read(8)\n",
+    "         data = rb.read(1024)\n",
     "         print(data)\n",
     "         if not data:\n",
     "             break"
