--- a/test.ipynb
+++ b/test.ipynb
@@ -14,8 +14,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.5 32-bit ('env')",
-   "display_name": "Python 3.8.5 32-bit ('env')",
+   "name": "Python 3.8.5 32-bit ('env': venv)",
+   "display_name": "Python 3.8.5 32-bit ('env': venv)",
    "metadata": {
     "interpreter": {
      "hash": "51320aac29360921745e54246e16a0ef501f9c8fbfcf0178a0c1015906c54a80"
@@ -304,75 +304,20 @@
    },
    "outputs": [],
    "source": [
-    "test_dic = {'include = common/audio-lame.conf':True, '123': 23,'game-exe':'d:\\\\smallgame\\\\N64\\\\mupen64plus\\\\mupen64plus.exe'}\n",
-    "test = test_dic.copy().items()\n",
-    "print(str(test_dic))\n",
-    "print(test_dic.keys())\n",
-    "print(test)\n",
-    "print(L)\n",
-    "print('include' in str(test_dic.keys()))\n",
-    "inclu = {}\n",
-    "if 'include' in str(test_dic):\n",
-    "    for k, v in test:\n",
-    "        if 'include' in str(k):\n",
-    "            inclu[k]=v\n",
-    "            test_dic.pop(k)\n",
-    "print(inclu)\n",
-    "print(test_dic)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def ABC(*test1, **test2):\n",
-    "    print(test2)\n",
-    "    print(f\"ewqewq {test1}\")\n",
-    "    print(', '.join(i for i in test1))\n",
-    "A = 2\n",
-    "test_dic = {'include = common/audio-lame.conf':True, '123': 23,'game-exe':'d:\\\\smallgame\\\\N64\\\\mupen64plus\\\\mupen64plus.exe'}\n",
-    "B = {\"B\":1}\n",
-    "C = {\"C\":3}\n",
-    "D = '1','2','3','65'\n",
-    "E = \"*\"\n",
-    "if C != {}:\n",
-    "    print(C)\n",
-    "if B != {}:\n",
-    "    print(B)\n",
-    "ABC(*D, **{\"A\":A})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "dict_values([123, 3423]) <class 'dict_values'>\nvideo-source-v4l-mode = 0 160 120\n\n"
-     ]
-    }
-   ],
-   "source": [
     "A = {'A': 123, 'B':3423}\n",
     "B = A.values()\n",
-    "C = '#video-source-v4l-mode = 0 160 120\\n'\n",
+    "C = 'omx-camera-flip-horizon = false\\n'\n",
     "'''\n",
     "for v in A.values():\n",
     "    print(v)\n",
     "'''\n",
-    "print(C.strip(\"#\"))\n",
-    "C = \"# \"+ C\n",
-    "print(C)"
+    "D = C.strip(\"#\")\n",
+    "D = \"# \"+ D\n",
+    "E = C.split()\n",
+    "E[2] = 'true'\n",
+    "E = ' '.join(E) + '\\n'\n",
+    "print(D)\n",
+    "print(E)"
    ]
   },
   {
@@ -622,7 +567,152 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import ipaddress\n",
+    "net = ipaddress.ip_network('192.168.43.0/24')\n",
+    "for i in net.hosts():\n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import paramiko\n",
+    "ssh_client = paramiko.SSHClient()\n",
+    "ssh_client.set_missing_host_key_policy(paramiko.AutoAddPolicy())\n",
+    "hostname = socket.gethostname()\n",
+    "IPadrr = socket.gethostbyname(hostname)\n",
+    "user = 'RD'\n",
+    "password = 'Aa123456'\n",
+    "ssh_client.connect(IPadrr, 22, user, password)\n",
+    "\n",
+    "std_in, std_out, std_err = ssh_client.exec_command('ipconfig')\n",
+    "res = std_out.read()\n",
+    "print(res.decode('big5'))\n",
+    "ssh_client.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<SFTPAttributes: [ size=991045679 uid=0 gid=0 mode=0o100600 atime=1605084769 mtime=1605084768 ]>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "import paramiko\n",
+    "\n",
+    "# 使用者名稱和密碼\n",
+    "hostname = socket.gethostname()\n",
+    "IPadrr = socket.gethostbyname(hostname)\n",
+    "user = 'RD'\n",
+    "password = 'Aa123456'\n",
+    "transport = paramiko.Transport((IPadrr, 22))\n",
+    "transport.connect(username=user, password=password)\n",
+    "\n",
+    "sftp = paramiko.SFTPClient.from_transport(transport)\n",
+    "\n",
+    "# 上傳檔案\n",
+    "sftp.put(\"C:\\\\Users\\\\RD\\\\Desktop\\\\xonotic-0.8.2.zip\", 'C:\\\\Users\\\\RD\\\\Desktop\\\\broker\\\\server\\\\xonotic-0.8.2.zip')  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SftpClient:\n",
+    "\n",
+    "    _connection = None\n",
+    "\n",
+    "    def __init__(self, host, port, username, password):\n",
+    "        self.host = host\n",
+    "        self.port = port\n",
+    "        self.username = username\n",
+    "        self.password = password\n",
+    "\n",
+    "        self.create_connection(self.host, self.port,\n",
+    "                               self.username, self.password)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def create_connection(cls, host, port, username, password):\n",
+    "\n",
+    "        transport = Transport(sock=(host, port))\n",
+    "        transport.connect(username=username, password=password)\n",
+    "        cls._connection = SFTPClient.from_transport(transport)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def uploading_info(uploaded_file_size, total_file_size):\n",
+    "\n",
+    "        logging.info('uploaded_file_size : {} total_file_size : {}'.\n",
+    "                     format(uploaded_file_size, total_file_size))\n",
+    "\n",
+    "    def upload(self, local_path, remote_path):\n",
+    "\n",
+    "        self._connection.put(localpath=local_path,\n",
+    "                             remotepath=remote_path,\n",
+    "                             callback=self.uploading_info,\n",
+    "                             confirm=True)\n",
+    "\n",
+    "    def file_exists(self, remote_path):\n",
+    "\n",
+    "        try:\n",
+    "            print('remote path : ', remote_path)\n",
+    "            self._connection.stat(remote_path)\n",
+    "        except IOError, e:\n",
+    "            if e.errno == errno.ENOENT:\n",
+    "                return False\n",
+    "            raise\n",
+    "        else:\n",
+    "            return True\n",
+    "\n",
+    "    def download(self, remote_path, local_path, retry=5):\n",
+    "\n",
+    "        if self.file_exists(remote_path) or retry == 0:\n",
+    "            self._connection.get(remote_path, local_path,\n",
+    "                                 callback=None)\n",
+    "        elif retry > 0:\n",
+    "            time.sleep(5)\n",
+    "            retry = retry - 1\n",
+    "            self.download(remote_path, local_path, retry=retry)\n",
+    "    def close(self):\n",
+    "        self._connection.close()\n",
+    "if __name__ == '__main__':\n",
+    "\n",
+    "    host = 'example.com'\n",
+    "    port = 22\n",
+    "    username = 'username'\n",
+    "    password = 'password'\n",
+    "\n",
+    "    download_remote_path = 'outgoing/download.txt'\n",
+    "    download_local_path = 'download.txt'\n",
+    "\n",
+    "    upload_local_path = 'upload.txt'\n",
+    "    upload_remote_path = 'incoming/upload.txt'\n",
+    "\n",
+    "    client = SftpClient(host, port,\n",
+    "                        username, password)\n",
+    "\n",
+    "    client.upload(upload_local_path,\n",
+    "                  upload_remote_path)\n",
+    "\n",
+    "    client.download(download_remote_path,\n",
+    "                    download_local_path)\n",
+    "    client.close()"
+   ]
   }
  ]
 }
