--- a/test.ipynb
+++ b/test.ipynb
@@ -14,8 +14,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.5 32-bit ('env': venv)",
-   "display_name": "Python 3.8.5 32-bit ('env': venv)",
+   "name": "Python 3.8.5 32-bit ('env')",
+   "display_name": "Python 3.8.5 32-bit ('env')",
    "metadata": {
     "interpreter": {
      "hash": "51320aac29360921745e54246e16a0ef501f9c8fbfcf0178a0c1015906c54a80"
@@ -597,20 +597,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<SFTPAttributes: [ size=991045679 uid=0 gid=0 mode=0o100600 atime=1605084769 mtime=1605084768 ]>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 10
-    }
-   ],
+   "outputs": [],
    "source": [
     "import paramiko\n",
     "\n",
@@ -713,6 +702,44 @@
     "                    download_local_path)\n",
     "    client.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "9.248\n"
+     ]
+    }
+   ],
+   "source": [
+    "def size_convert(bytes):\n",
+    "    BB = float(bytes)\n",
+    "    KB = float(1024)\n",
+    "    MB = float(KB ** 2)\n",
+    "    GB = float(KB ** 3)\n",
+    "\n",
+    "    if KB <= BB < MB:\n",
+    "      return round(BB/KB, 3)\n",
+    "    elif MB <= BB < GB:\n",
+    "      return round(BB/MB, 3)\n",
+    "    elif GB <= BB:\n",
+    "      return round(BB/GB, 3)\n",
+    "    else:\n",
+    "      return BB\n",
+    "print(size_convert(9930434211))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
