--- a/test.ipynb
+++ b/test.ipynb
@@ -739,7 +739,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "''' # 修改轉換字串\n",
+    "    if 'config' in EDIT:\n",
+    "        key = \"\"\n",
+    "        NEWEDIT = EDIT.replace(\"\\'\", \"\\\"\")\n",
+    "        for i in range(len(EDIT)):\n",
+    "            if EDIT[i] == \":\":\n",
+    "                for j in range(i-1, 0, -1):\n",
+    "                    if EDIT[j] == \" \":\n",
+    "                        break \n",
+    "                    key = key + EDIT[j]\n",
+    "                key = key[::-1]\n",
+    "                if f\"\\\"{key}\\\"\" not in NEWEDIT:\n",
+    "                    NEWEDIT = NEWEDIT.replace(f\"{key}\", f\"\\\"{key}\\\"\")\n",
+    "                key = \"\"\n",
+    "        log.debug(NEWEDIT)  \n",
+    "        EDIT = json.loads(NEWEDIT)\n",
+    "    '''"
+   ]
   }
  ]
 }
