--- a/test.ipynb
+++ b/test.ipynb
@@ -14,11 +14,11 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.5 32-bit ('env')",
+   "name": "python3",
    "display_name": "Python 3.8.5 32-bit ('env')",
    "metadata": {
     "interpreter": {
-     "hash": "51320aac29360921745e54246e16a0ef501f9c8fbfcf0178a0c1015906c54a80"
+     "hash": "9b3e4d26f58aaa35d32b6db371f10803b3b45d87a32ece3b4785e4e9268c9743"
     }
    }
   }
@@ -705,17 +705,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "9.248\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def size_convert(bytes):\n",
     "    BB = float(bytes)\n",
@@ -758,6 +750,53 @@
     "        EDIT = json.loads(NEWEDIT)\n",
     "    '''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "PermissionError",
+     "evalue": "[WinError 32] 程序無法存取檔案，因為檔案正由另一個程序使用。: 'ABC.zip'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-24-c46ca4a7d2ef>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mzf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextractall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'ABC'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mzf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mF\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mPermissionError\u001b[0m: [WinError 32] 程序無法存取檔案，因為檔案正由另一個程序使用。: 'ABC.zip'"
+     ]
+    }
+   ],
+   "source": [
+    "from zipfile import ZipFile\n",
+    "import os\n",
+    "\n",
+    "gamepath = \"C:\\\\gamefile\\\\\"\n",
+    "F = 'ABC.zip'\n",
+    "os.chdir(gamepath)\n",
+    "with ZipFile(F) as zf:\n",
+    "    zf.extractall('ABC')\n",
+    "zf.close()\n",
+    "# os.remove(F)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "F = 'ABC.zip'\n",
+    "print(F.rstrip('.zip'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
